using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings{
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunning";
    internal static string isJumping = "IsJumping";
    internal static string IsGrounded = "IsGrounded";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
}
